# p2p-chat

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml
frontend/src/: lib.rs
